# Geant4_Codes_for_Solar_Simulations

./: README  README.md
GC_Analytic_dipole/: CMakeLists.txt  erun10015.mac  erun10035.mac  erun10080.mac  erun1015.mac  erun1035.mac  erun1080.mac  erun115.mac  erun135.mac  erun180.mac  erun50015.mac  erun50035.mac  erun50080.mac  run0.mac  run115.mac  run135.mac  run180.mac  run25015.mac  run25035.mac  run25080.mac  run50015.mac  run50035.mac  run50080.mac  run515.mac  run535.mac  run580.mac  solar.cc  solar.in  test_solar1.mac  vis.mac
GC_Analytic_dipole/include/: Solar_ActionInitialization.hh  Solar_Analysis.hh  Solar_Dipole.hh  Solar_EventAction.hh  Solar_FieldMessenger.hh  Solar_FieldSetup.hh  Solar_GC.hh  Solar_PrimaryGeneratorAction.hh  Solar_RunAction.hh  Solar_SteppingAction.hh
GC_Analytic_dipole/src/: Solar_ActionInitialization.cc  Solar_DetectorConstruction.cc  Solar_Dipole.cc  Solar_FieldMessenger.cc  Solar_GC.cc  Solar_PrimaryGeneratorAction.cc  Solar_RunAction.cc  Solar_SD.cc  Solar_SteppingAction.cc
GC_Analytic_double_dipole/: CMakeLists.txt  GNUmakefile  Makefile  Solar_field.in  run2k.mac  run5k.mac  runTestEnergy.mac  solar.cc
GC_Analytic_double_dipole/.ipynb_checkpoints/: Tests-checkpoint.ipynb
GC_Analytic_double_dipole/include/: Solar_ActionInitialization.hh  Solar_Analysis.hh  Solar_DetectorConstruction.hh  Solar_Dipole.hh  Solar_FieldSetup.hh
GC_Analytic_double_dipole/src/: Solar_Dipole.cc  Solar_EventAction.cc  Solar_FieldSetup.cc  Solar_GC.cc  Solar_SteppingAction.cc
GC_Tabulated_dipole/: CMakeLists.txt  cmake_install.cmake  run0.mac  run0.mac.bak  runTest.mac  solar.cc  vis.mac
GC_Tabulated_dipole/.ipynb_checkpoints/: Steppers-checkpoint.ipynb  Tests-checkpoint.ipynb  read_logs-checkpoint.ipynb
GC_Tabulated_dipole/include/: Solar_ActionInitialization.hh  Solar_EventAction.hh  Solar_FieldMessenger.hh  Solar_FieldSetup.hh  Solar_GC.hh  Solar_PrimaryGeneratorAction.hh  Solar_RunAction.hh  Solar_SD.hh  Solar_SteppingAction.hh  Solar_TabulatedField.hh
GC_Tabulated_dipole/src/: Solar_ActionInitialization.cc  Solar_DetectorConstruction.cc  Solar_EventAction.cc  Solar_FieldMessenger.cc  Solar_FieldSetup.cc  Solar_GC.cc  Solar_PrimaryGeneratorAction.cc  Solar_RunAction.cc  Solar_SD.cc  Solar_TabulatedField.cc
